# ChangeLog file for java
# This file is updated with Maddlog
